@@ -1,10 +1,9 @@
-package com.groenify.api.framework.resolver;
+package com.groenify.api.framework.annotation.resolver;
 
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.method.support.HandlerMethodArgumentResolver;
 
-import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -13,8 +12,9 @@ public class PathResolverContainer {
     private final List<HandlerMethodArgumentResolver> list;
 
     public PathResolverContainer(
-            final EPoleBrandInPathResolver resolver1) {
-        this.list = Collections.singletonList(resolver1);
+            final EPoleBrandInPathResolver resolver1,
+            final CompanyInPathResolver resolver2) {
+        this.list = List.of(resolver1, resolver2);
     }
 
     public List<HandlerMethodArgumentResolver> getList() {
